Fix p-tag's overflow

--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,7 @@ h2 {
 h3 {
   font-size: 18px;
   font-weight: 500;
+  overflow-wrap: break-word;
 }
 
 h4 {
