--- a/src/pages/Blogs/Blogs.module.css
+++ b/src/pages/Blogs/Blogs.module.css
@@ -29,7 +29,6 @@
 .blogHeader {
   width: 100%;
   display: flex;
-  /* flex-direction: column; */
   justify-content: space-between;
 }
 
@@ -42,17 +41,16 @@
   align-items: center;
   padding: 0 0.5rem;
   margin: 0.2rem 0.2rem;
-  border: 1px solid var(--background);
-  border-radius: 20px;
   word-wrap:normal;
   max-width: 100%;
 }
 
 .comment p {
-  width: 200px;
+  width: 180px;
   overflow-wrap: break-word;
   padding: 5%;
-  text-align: left;
+  border: 1px solid var(--background);
+  border-radius: 20px;
 }
 
 .comments {
